manifest/apps/staging/load-balancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: aae0fd4a73bbe49479af67624f495c79-2033732505.ap-southeast-3.elb.amazonaws.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: goapp-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactapp-service
                port:
                  number: 80
